[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "refresh"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "zengjosh", email = "zeng080407@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
    "pydantic",
    "httpx",
]

[project.urls]
Documentation = "https://github.com/zengjosh/alm-sdk#readme"
Issues = "https://github.com/zengjosh/alm-sdk/issues"
Source = "https://github.com/zengjosh/alm-sdk"

[tool.hatch.version]
path = "src/alm_sdk/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]

[tool.hatch.envs.default]
dependencies = [
  "pytest",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/alm_sdk tests}"

[tool.coverage.run]
source_pkgs = ["alm_sdk", "tests"]
branch = true
parallel = true
omit = [
  "src/alm_sdk/__about__.py",
]

[tool.coverage.paths]
alm_sdk = ["src/alm_sdk", "*/alm-sdk/src/alm_sdk"]
tests = ["tests", "*/alm-sdk/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
